# prod-api

./: .env.dist  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yml  eva-sync.service  eva-sync.timer  multisite-api.service  pyproject.toml  requirements.txt  seed.py
admin-src/: index.html  package-lock.json  package.json  vite.config.ts
admin-src/src/: App.tsx  index.css
admin-src/src/lib/: api.ts
admin-src/src/pages/: About.tsx  Articles.tsx  (+8 more)
admin_dist/: index.html
admin_dist/assets/: index-B0cFjmRS.js  index-B95oeU-n.js  index-BEIDgw-G.js  index-BPdi0LYQ.js  index-BV06DKZ6.js  index-BhqmFeMP.css  index-Bi1tLmJ7.css  index-CIfvlb9j.js  index-CVvPGUJM.css  index-C_58LQDA.css  index-Ci39meNm.css  index-Cy6Q9CCs.js  index-Dbi43NHn.js  index-Dj5Kkm1h.js  index-Dl-Jy1wE.js  index-DzGT0LGO.js  index-U6SDk2Hj.js  index-icvyJBJZ.js  index-lXGpFGBb.css  index-xR_D1Usk.js
alembic/: env.py
alembic/versions/: 001_add_banner_fields.py  002_add_details_to_skills.py  003_add_matches_table.py
app/: auth.py  config.py  main.py
app/models/: __init__.py  about.py  analytics.py  article.py  experience.py  gallery.py  match.py  message.py  project.py  roster.py  skill.py  user.py
app/routers/: about.py  analytics.py  articles.py  auth.py  cv.py  experiences.py  gallery.py  matches.py  messages.py  projects.py  roster.py  skills.py  synthesis.py  upload.py
app/schemas/: about.py  analytics.py  article.py  auth.py  experience.py  gallery.py  match.py  message.py  project.py  roster.py  skill.py
scripts/: sync_eva_matches.py
