[project]
name = "multisite-api"
version = "2.0.0"
description = "API centralisée pour Portfolio, Eclyps et Admin"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic-settings",
    "python-multipart",
    "python-dotenv",
    "alembic",
    "passlib[bcrypt]",
    "bcrypt==4.0.1",
    "python-jose[cryptography]",
    "httpx",
    "slowapi",
]
